fix fortran interface generation

--- a/lib/etc/code/fortran/templates/template_interface_entry.jinja
+++ b/lib/etc/code/fortran/templates/template_interface_entry.jinja
@@ -3,10 +3,9 @@
 #include <stdio.h>
 #include <dlfcn.h>
 #include "manual_interface.h"
-
 void *mpi_comm_null_copy_fn_ = NULL;
 void *mpi_win_dup_fn_ = NULL;
-//void *mpi_null_copy_fn_ = NULL;
+void *mpi_null_copy_fn_ = NULL;
 void *mpi_comm_null_delete_fn_ = NULL;
 void *mpi_comm_dup_fn_ = NULL;
 //void *mpi_type_null_copy_fn_ = NULL;
