--- a/lib/etc/code/fortran/templates/template_A.jinja
+++ b/lib/etc/code/fortran/templates/template_A.jinja
@@ -5,22 +5,24 @@
 {%-  set ret_type = mappers[func['ret']['name']]['type']-%} 
 {%-  set ret_run_type = mappers[func['ret']['name']]['type']-%}
 {% set variadic =0 %}
+{% set count_char=namespace(value="") %}
 {% if func['name'][-3:] != 'f2c' and func['name'][-3:] != 'c2f' and func['name'][-5:] != 'c2f08' and func['name'][-5:] != 'f2f08' and func['name'][-5:] != 'f082c' and func['name'][-5:] != 'f082f' and func['name'][:6] != 'MPI_T_' %}
 {% if  conf[func['name']] is defined and  conf[func['name']]['Application'] is defined and conf[func['name']]['Application']['fortran'] is defined and conf[func['name']]['Application']['fortran']['generated'] == "False" -%}
 {%-if conf[func['name']]['Application']['fortran']['declare'] is not defined or conf[func['name']]['Application']['fortran']['declare'] == "True"  -%}
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}__({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+{% for arg in func['args'] %} {% if mappers[arg['name']]['type'].split('*')|first|trim == "char" %} {%set count_char.value=count_char.value ~ ", fort_string_length len_" ~ arg['var'].split('[')|first %} {%endif%} {%endfor %}
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}__({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 #define A_f_{{func['name']}} _{{func['name']}}
 
-    {{decl_ext}} {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {{decl_ext}} {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 
 #pragma weak {{func['name']|lower}}_ = _{{func['name']}}
 #pragma weak {{func['name']|lower}}__ = _{{func['name']}}
 #pragma weak p{{func['name']|lower}}__ = _{{func['name']}}
 
-    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} (*LOCAL_f_{{func['name']}})({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} (*LOCAL_f_{{func['name']}})({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 {%- endif %}
 
  {%-  if conf[func['name']]['Application']['fortran']['file'] is defined -%}
@@ -36,7 +38,7 @@
 
 #ifndef __F_{{func['name']}}
 #ifndef {{func['name']|upper}}_OVERRIDE
-    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%})
+    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}})
 
 {   
    fprintf(stderr,"{{func['name']}} is not implemented yet in fortran\n");
@@ -49,26 +51,26 @@
 #endif
  {% endif %}
 {%  else-%} 
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}__({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}__({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 
 #define A_f_{{func['name']}} _{{func['name']}}
 
-    {{decl_ext}} {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {{decl_ext}} {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 
 #pragma weak {{func['name']|lower}}_ = _{{func['name']}}
 #pragma weak {{func['name']|lower}}__ = _{{func['name']}}
 #pragma weak p{{func['name']|lower}}__ = _{{func['name']}}
 
 
-    {% if ret_type == "int " %} void {%-else -%}{{ ret_run_type }} {%-endif%} (*LOCAL_f_{{func['name']}})({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {% if ret_type == "int " %} void {%-else -%}{{ ret_run_type }} {%-endif%} (*LOCAL_f_{{func['name']}})({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}});
 #define __F_{{func['name']}}__GEN__
 #ifndef __F_{{func['name']}}
 #ifndef {{func['name']|upper}}_OVERRIDE
 
-    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%})
+    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} A_f_{{func['name']}}({%-  for arg in func['args']-%}  {%-  if loop.index > 1 and arg["variadic"]!= "True" -%}  , {%-  endif-%} {%if arg["variadic"]!= "True" %} {{ type_prefix('A_',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%}{{count_char.value}})
     {
     #ifdef TIMEOUT_SUPPORT
     wi4mpi_set_timeout(WI4{{func['name']}}_timeout);
@@ -119,9 +121,9 @@
         {% endif %}
     {%-  endfor %} 
     {% if ret_type == "int " %} int ret_tmp; 
-        LOCAL_f_{{func['name']}}({%-  for arg in func['args']-%}{% if arg['variadic']|default("") != "True" %} {%-  if loop.index > 1  -%}  , {%-  endif-%}{%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var']|replace([],'') }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%- endif -%} {%-  endfor-%}{%- if func['args']|count != 0 -%}, {%- endif -%} &ret_tmp );
+        LOCAL_f_{{func['name']}}({%-  for arg in func['args']-%}{% if arg['variadic']|default("") != "True" %} {%-  if loop.index > 1  -%}  , {%-  endif-%}{%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var']|replace([],'') }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%- endif -%} {%-  endfor-%}{%- if func['args']|count != 0 -%}, {%- endif -%} &ret_tmp {{count_char.value}});
 {%else %}
-       {{ret_type}} ret_tmp= LOCAL_f_{{func['name']}}({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%}{%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var']|replace([],'') }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%-  endfor-%});
+       {{ret_type}} ret_tmp= LOCAL_f_{{func['name']}}({%-  for arg in func['args']-%}{%-  if loop.index > 1-%}  , {%-  endif-%}{%-  if  mappers[arg['name']]['no_map'] is not defined and  mappers[arg['name']]['wrap'] is not defined  and  mappers[arg['name']]['set'] is not defined-%} {{ arg['var']|replace([],'') }}_tmp {%- else -%}   {{ arg['var'].split('[')|first }} {%- endif -%}  {%-  endfor-%} {{count_char.value}});
 {%endif%}
 
     {%  for arg in func['args'] -%} 
