--- a/lib/etc/code/fortran/templates/template_static.jinja
+++ b/lib/etc/code/fortran/templates/template_static.jinja
@@ -9,5 +9,7 @@
 void debug_printer(const char *, ...); 
 #define __mpi_interface_removed__(a,b) /* __mpi_interface_removed__(a,b) */
 #include "helper.h"                                                                                      
+#include "mappers.h"                                                                                      
 #include "wrapper_f.h"
 extern __thread int in_w;
+#include "fort_common.h"
