--- a/lib/etc/code/C/templates/template_static.jinja
+++ b/lib/etc/code/C/templates/template_static.jinja
@@ -25,13 +25,23 @@ void debug_printer(const char *, ...);
 #include "helper.h"                                                                                      
 #include "mappers.h"                                                                                     
 __thread int in_w = 0;                                                                                   
+#if defined(INTEL_INTEL) || defined(INTEL_OMPI) ||  defined(_MPC) 
 int (*local_MPIR_Dup_fn)(A_MPI_Comm oldcomm, int keyval, void *extra_state,                              
                          void *attribute_val_in, void *attribute_val_out,                                
                          int *flag);                                                                     
-#if defined(INTEL_INTEL) || defined(INTEL_OMPI) || defined(OMPI_INTEL) || \
-  defined(_MPC) || defined(_INTEL)
                                                                                                          
 int MPIR_Dup_fn(A_MPI_Comm oldcomm, int keyval, void *extra_state,                                       
+                void *attribute_val_in, void *attribute_val_out, int *flag) {                            
+  return local_MPIR_Dup_fn(oldcomm, keyval, extra_state, attribute_val_in,                               
+                           attribute_val_out, flag);                                                     
+}                                                                                                        
+#endif
+#if defined(_INTEL) ||defined(OMPI_INTEL) 
+int (*local_MPIR_Dup_fn)(R_MPI_Comm oldcomm, int keyval, void *extra_state,                              
+                         void *attribute_val_in, void *attribute_val_out,                                
+                         int *flag);                                                                     
+                                                                                                         
+int MPIR_Dup_fn(R_MPI_Comm oldcomm, int keyval, void *extra_state,                                       
                 void *attribute_val_in, void *attribute_val_out, int *flag) {                            
   return local_MPIR_Dup_fn(oldcomm, keyval, extra_state, attribute_val_in,                               
                            attribute_val_out, flag);                                                     
