--- a/lib/etc/code/fortran/templates/template_interface.jinja
+++ b/lib/etc/code/fortran/templates/template_interface.jinja
@@ -5,6 +5,7 @@
     {%-  set ret_type = mappers[func['ret']['name']]['type']-%} 
 #ifndef IF_{{func['name']}}
     {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({%-  for arg in func['args']-%} {%if arg["variadic"]!= "True" %}  {%-  if loop.index > 1-%}  , {%-  endif-%}  {{ type_prefix('',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
+    {% if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({%-  for arg in func['args']-%} {%if arg["variadic"]!= "True" %}  {%-  if loop.index > 1-%}  , {%-  endif-%}  {{ type_prefix('',mappers[arg['name']]['type']) }} {{arg['var'].split('[')|first}} {%endif %}{%-  endfor-%} {%- if ret_type == "int " %}{%- if func['args']|count != 0 -%}, {%- endif -%} int *ret {%- endif -%});
     #pragma weak {{func['name']|lower}}_=p{{func['name']|lower}}_
 
     #ifdef WI4MPI_STATIC
