--- a/src/resources/generator_data/code/fortran/templates/template_interface_entry.jinja
+++ b/src/resources/generator_data/code/fortran/templates/template_interface_entry.jinja
@@ -3,6 +3,7 @@
 #include <stdio.h>
 #include <dlfcn.h>
 
+#include "fort_common.h"
 #include "manual_interface.h"
 void *mpi_comm_null_copy_fn_ = NULL;
 void *mpi_win_dup_fn_ = NULL;
