--- a/src/resources/generator_data/code/fortran/templates/template_A.jinja
+++ b/src/resources/generator_data/code/fortran/templates/template_A.jinja
@@ -55,7 +55,7 @@
     {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}_({{generate_arg_list(mappers, func, ret_type, count_char)}});
     {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} {{func['name']|lower}}__({{generate_arg_list(mappers, func, ret_type, count_char)}});
     {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({{generate_arg_list(mappers, func, ret_type, count_char)}});
-    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}_({{generate_arg_list(mappers, func, ret_type, count_char)}});
+    {%- if ret_type == "int " %} void {%-else -%}{{ ret_type }} {%-endif%} p{{func['name']|lower}}__({{generate_arg_list(mappers, func, ret_type, count_char)}});
 
 #define A_f_{{func['name']}} _{{func['name']}}
 
